--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   collection: ^1.18.0
   share_plus: ^7.2.2
   firebase_storage: ^12.4.6
-  permission_handler: ^12.0.0+1
+  permission_handler: ^11.3.1
   google_sign_in: ^6.2.1
   image_picker: ^1.1.2
 
