--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   shimmer: ^3.0.0
   logger: ^2.0.2
   path_provider: ^2.1.2
-  intl: ^0.19.0
+  intl: 0.19.0
   uuid: ^4.0.0
   cached_network_image: ^3.3.1
   file_picker: ^6.1.1
