--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^1.1.2
   shared_preferences: ^2.5.3
   csv: ^5.0.2
+  cloud_functions: ^5.6.1
 
 dev_dependencies:
   flutter_test:
