--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assets/images/banner_placeholder.png
     - assets/icons/
     - assets/images/avatar_placeholder.png
+    - assets/images/default_profile.png
 
 flutter_icons:
   android: false
