--- a/functions/package.json
+++ b/functions/package.json
@@ -15,6 +15,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "firebase": "^11.10.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.3.2"
