--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.5.3
   csv: ^5.0.2
   cloud_functions: ^5.6.1
+  go_router: ^16.0.0
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +64,7 @@ flutter:
     - assets/images/default_profile.png
     - assets/images/menu_item_placeholder.png
     - assets/images/ingredient_placeholder.png
+    - assets/images/admin_empty.png
 
 flutter_icons:
   android: false
