Fix: Fully unify onboarding flows, provider usage, and schema repair logic
- Refactor all onboarding screens (menu items, ingredients, ingredient types, categories) for consistent Provider usage and dependency injection.
- Update menu_item_editor_screen and onboarding_menu_items_screen to use correct MultiProvider structures.
- Eliminate duplicate staging of ingredients, ingredient types, and categories during schema repair via sidebar (fixes double-add bug).
- Correctly stage and persist new categories, ingredients, and types only via creation dialogs.
- Update and audit all ingredient, ingredient type, and category dialogs (import/export, template pickers, list tiles, form cards) for robust onboarding flow.
- Add enhanced debug logging and error handling across providers and dialogs.
- Update category, ingredient, and ingredient type providers for full onboarding compatibility and robust debug output.
- Misc: pubspec.yaml and scrolling_json_editor updated for dependency and onboarding flow support.
- [No user-facing database bug: All new menu items, ingredients, categories, and types are now correctly staged and saved from onboarding UI.]

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ flutter:
     - assets/images/menu_item_placeholder.png
     - assets/images/ingredient_placeholder.png
     - assets/images/admin_empty.png
+    - assets/images/
 
 flutter_icons:
   android: false
