--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "build/web",
+    "public": "admin-portal/build/web",
     "ignore": [
       "firebase.json",
       "**/.*",
