--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -1,13 +1,13 @@
+# .github/workflows/deploy-web.yml
 name: Deploy Web to Firebase
 
 on:
   push:
     branches: [ main ]
-    # Remove 'paths' temporarily to test
-  # paths:
-  #   - 'franchise-admin-portal/**'
-  #   - 'firebase.json'
-  #   - '.github/workflows/deploy-web.yml'
+    paths:
+      - 'franchise-admin-portal/**'
+      - 'firebase.json'
+      - '.github/workflows/deploy-web.yml'
 
 jobs:
   build-and-deploy:
