--- a/packages/shared_core/pubspec.yaml
+++ b/packages/shared_core/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   equatable: ^2.0.7
   cloud_functions: ^5.6.2
   logging: ^1.3.0
+  intl: ^0.20.2
+  logger: ^2.6.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
